chore: update copy

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 alt="Suika Coin Logo"
                 class="w-16 h-16"
               />
-              <span class="text-2xl">Oishii desu! (≧▽≦) </span>
+              <span class="text-2xl"><span class="font-bold">Suika Coin</span> — Oishii desu! (≧▽≦) 🇯🇵</span>
             </div>
             <a
               href="mailto:info@suikacoin.com"
